[#1547] Fix partner section: gap & button in mobile view

--- a/frontend/src/pages/landing/index.module.scss
+++ b/frontend/src/pages/landing/index.module.scss
@@ -1040,9 +1040,10 @@
   flex-direction: column;
   align-items: center;
   gap: 41px;
-  margin: 80px 25px;
+  padding: 80px 0;
   @media only screen and (max-width: 640px) {
-    margin: 32px 25px;
+    gap: 32px;
+    padding: 32px 0;
   }
   :global {
     .partner-container {
@@ -1060,6 +1061,9 @@
       align-items: center;
       gap: 62px;
       overflow-x: auto;
+      @media only screen and (max-width: 640px) {
+        gap: 42.64px;
+      }
     }
     .partner-container .partner-items .partner-item {
       width: 100%;
@@ -1084,28 +1088,34 @@
         max-width: 110px;
       }
     }
-    .ant-btn.ant-btn-primary {
-      width: fit-content;
-      @media only screen and (max-width: 640px) {
-        width: 100%;
-      }
-    }
-    .ant-btn.ant-btn-background-ghost {
-      background-color: transparent;
-      border-color: $primaryDarkBlue;
+    .container h2.semibold {
       color: $primaryDarkBlue;
-      &:hover {
-        background-color: $primaryGreen;
-        border-color: $primaryGreen;
-        svg path {
-          transform: translateX(3px);
-        }
-      }
-    }
-    h2.semibold {
+      text-align: center;
       @media only screen and (max-width: 640px) {
         font-size: $fzL;
         line-height: $lhL;
+      }
+    }
+    .partner-button {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      padding: 0 25px;
+    }
+    .partner-button .ant-btn.ant-btn-background-ghost:hover {
+      svg path {
+        transform: translateX(3px);
+      }
+    }
+    @media only screen and (max-width: 640px) {
+      .partner-button .ant-btn.ant-btn-background-ghost {
+        width: 100% !important;
+        justify-content: space-between;
+        & > span {
+          padding-left: 25%;
+        }
       }
     }
   }
